# Datathon-2024

./: README.md  arbols.ipynb  prueba.ipynb  pyproject.toml  sac-18.ipynb  zonasVerdes.ipynb
data/: Arboles.xlsx  SAC_2018.csv  barrios.csv
data2/: arboles.csv
