[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Lucas A. Ugartemendia <ugartelucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
selenium = "^4.21.0"
numpy = "^1.26.4"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
nltk = "^3.8.1"
spacy = "^3.7.4"
gensim = "^4.3.2"
torch = "^2.3.0"
torchtext = "^0.18.0"
plotly-express = "^0.4.1"
ollama = "^0.2.0"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
